# contextforge-mcp-lab

./: .env.example  .gitignore  LICENSE  PORTFOLIO_WRITEUP.md  README.md  SETUP.md  pyproject.toml
data/: sample_documents.json  sample_tasks.json
docs/: ARCHITECTURE.md  DEMO_PLAN.md
sample_files/: customer_support_policy.txt  marketing_campaign_notes.txt  project_meeting_summary.txt  research_brief_llm_evals.txt  server_maintenance_log.txt
src/: __init__.py  config.py  database.py  seed_data.py  server.py  tools.py
tests/: test_database.py  test_tools.py
