[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contextforge-mcp-lab"
version = "0.1.0"
description = "ContextForge MCP Lab: a local MCP-style AI infrastructure project using Python, SQLite, structured files, and controlled tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContextForge MCP Lab" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
